Correct gap on contacts

--- a/styles.css
+++ b/styles.css
@@ -122,8 +122,7 @@ footer {
 
 .contacts {
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
-  align-items: center;
+  grid-template: 1fr 1fr / 1fr 5fr;
 }
 
 .contacts img {
